--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,8 @@ body {
 /* Footer */
 footer {
 	margin:var(--spacing-xxl) 0;            /* 4rem (64px) top and bottom */
-    font-size:var(--scale-0);
+        font-size:var(--scale-0);
+	text-align:center;
 }
 
 /* Responsive adjustments */
