--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+* LittleLink
+* https://littlelink.io
+* Free to use under the MIT license
+* http://www.opensource.org/licenses/mit-license.php
+*/
 
 /* Base Typography Settings
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -94,7 +100,7 @@
   --scale-3:1.953rem;       /* 31px */
   --scale-4:2.441rem;       /* 39px */
   --scale-5:3.052rem;       /* 49px */
-
+  
   /* Spacing units */
   --spacing-xs:0.5rem;      /* 8px */
   --spacing-s:1rem;         /* 16px */
@@ -146,8 +152,7 @@ body {
 /* Footer */
 footer {
 	margin:var(--spacing-xxl) 0;            /* 4rem (64px) top and bottom */
-        font-size:var(--scale-0);
-	text-align:center;
+    font-size:var(--scale-0);
 }
 
 /* Responsive adjustments */
@@ -165,8 +170,7 @@ body {
 	margin-bottom:var(--spacing-m);
 }
 footer {
-	margin:var(--spacing-xl) 0;
-	text-align:center;/* 3rem (48px) top and bottom */
+	margin:var(--spacing-xl) 0;         	/* 3rem (48px) top and bottom */
 }
 }
 
@@ -187,7 +191,7 @@ a:hover {
 	align-items:center;
 	justify-content:center;
 	width:18.75rem;             	/* 300px */
- 	min-height:3rem;                /* 48px */
+ 	min-height:3rem;               /* 48px */
   	padding:0.75rem 1rem;         	/* 12px ; 16px */
   	font-size:1.125rem;           	/* 18px */
   	font-weight:700;
@@ -233,7 +237,7 @@ a:hover {
   .avatar--rounded {
 	border-radius: 50%;
   }
-
+  
   /* Modifier for slightly rounded corners */
   .avatar--soft {
 	border-radius: 0.5rem;   /* 8px rounded corners */
@@ -242,7 +246,7 @@ a:hover {
 /* Theme System
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Light theme is default above */
-
+  
 /* Dark theme */
 :root.theme-dark {
 	color-scheme:dark;
