--- a/css/brands.css
+++ b/css/brands.css
@@ -38,6 +38,12 @@
 	--button-border:1px solid #ffffff;
 }
 
+/* Blogspot */
+.button-blogspot {
+    --button-text: #000000;
+    --button-background: #ff4000;
+}
+
 /* Amazon */
 .button-amazon {
 	--button-text:#000000;
