--- a/css/brands.css
+++ b/css/brands.css
@@ -38,19 +38,6 @@
 	--button-border:1px solid #ffffff;
 }
 
-/* Blogspot */
-.button-blogspot {
-    color: var(--button-text);
-    background: var(--button-background);
-    border: var(--button-border);
-    transition: all 0.3s ease;
-}
-
-.button-blogspot:hover {
-    background: #cc3300;
-    transform: scale(1.05);
-}
-
 /* Amazon */
 .button-amazon {
 	--button-text:#000000;
@@ -643,4 +630,11 @@
 	--button-text:#ffffff;
 	--button-background:#0B5CFF;
   --button-border:1px solid #FFFFFF;
+}
+
+/* Blogspot */
+.button-blogspot {
+    --button-text: #000000;
+    --button-background: #ff4000;
+    --button-border: 1px solid #FFFFFF;
 }
