--- a/css/brands-extended.css
+++ b/css/brands-extended.css
@@ -483,3 +483,10 @@
   --button-background:#FFFFFF;
   --button-border:1px solid #0068FF;
 }
+
+/* Blogspot */
+.button-blogspot {
+    --button-text: #000000;
+    --button-background: #ff4000;
+    --button-border: 1px solid #FFFFFF;
+}
